[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rowanqol"
version = "0.3.0"
description = "QoL stuff for python!"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Rowan", email = "rowanliamjones@gmail.com" }
]

dependencies = [
    "thefuzz"
]

[tool.hatch.build.targets.wheel]
packages = ["src/rowanqol"]


