[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rowanqol"
version = "0.4.1"
description = "QoL stuff for python!"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Rowan", email = "rowanliamjones@gmail.com" }
]

dependencies = [
    "thefuzz"
]

[tool.hatch.build.targets.wheel]
packages = ["src/rowanqol"]


